--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("IMG_1453.jpg");
+  background-image: url("North-Korea-security--1208x772.jpg");
   position: absolute;
 }
 
