--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background-color: #559da1;
+  background-img: url("North-Korea-security--1208x772.jpg");
   font-family: sans-serif;
   height: 100vh;
 }
