--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ $grey: #8e979b;
 }
 
 body {
-  background-color: #559da1;
+  background: url('North-Korea-security--1208x772.jpg");
   font-family: sans-serif;
   height: 100vh;
 }
