--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
   -webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
-  background-color:#333;
+  background-image:url(North-Korea-security--1208x772.jpg);
   font-family:Roboto,Arial,sans-serif;
 }
 
