--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@ body{
   -webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
-  
-  
-  background-image: url("North-Korea-security--1208x772.jpg");
+  background-image:url(https://picturelements.github.io/games/minesweeper/media/boardicons.png);
   font-family:Roboto,Arial,sans-serif;
 }
 
