--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-  background-image: src("North-Korea-security-1208x772.jpg");
+.body {
+  background-image: url("North-Korea-security-1208x772.jpg");
   position: absolute;
 }
 
