--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-  background-image: url("North-Korea-security-1208x772.jpg");
+  background: url("North-Korea-security-1208x772.jpg");
   position: absolute;
 }
 
